appId: com.streamentry.linepay
---
- scrollUntilVisible:
    element:
      id: paystub.manual
    timeout: 60000
- waitForAnimationToEnd
- tapOn:
    id: paystub.manual
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: paystub.audit
    timeout: 60000
- waitForAnimationToEnd
- assertVisible:
    id: paystub.audit
    enabled: false
- scrollUntilVisible:
    element:
      id: paystub.confirm-dates
    direction: UP
    timeout: 60000
    centerElement: true
- waitForAnimationToEnd
- tapOn:
    id: paystub.confirm-dates
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: paystub.inline.gross
    timeout: 60000
    centerElement: true
- waitForAnimationToEnd
- tapOn:
    id: paystub.inline.gross
- waitForAnimationToEnd
- inputText: ${GROSS}
- tapOn:
    id: keyboard.done
- waitForAnimationToEnd
- takeScreenshot: manual-paystub-field
- scrollUntilVisible:
    element:
      id: paystub.complete-work
    timeout: 60000
    centerElement: true
- waitForAnimationToEnd
- tapOn:
    id: paystub.complete-work
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: paystub.gross-basis.wagesOnly
    visibilityPercentage: 100
    timeout: 60000
    centerElement: true
- waitForAnimationToEnd
- takeScreenshot: gross-basis-before-selection
- tapOn:
    id: paystub.gross-basis.wagesOnly
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: paystub.audit
    timeout: 60000
- waitForAnimationToEnd
- tapOn:
    id: paystub.audit
- waitForAnimationToEnd
